# riirc

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs
src/irc/: channel.rs  client.rs  command.rs  ircclient.rs  message.rs  mod.rs  prefix.rs  queue.rs  state.rs
src/ui/: boundedset.rs  buffer.rs  colors.rs  events.rs  gui.rs  history.rs  keybinds.rs  messagequeue.rs  mod.rs  output.rs  request.rs  state.rs
src/ui/commands/: bind.rs  buffer.rs  clear.rs  clear_history.rs  connect.rs  echo.rs  exit.rs  join.rs  list_buffers.rs  mod.rs  part.rs  quit.rs  rehash.rs
src/ui/windows/: container.rs  input.rs  mod.rs  nicklist.rs  output.rs
